--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   top: 15px;
   width: 150px;
   height: 309px;
-  vertical-align: middle;
+  vertical-align: left;
   text-align: center;
   font-family:"Rancho";
   font-style: normal;
@@ -72,8 +72,28 @@
 .pic11 {
   position: relative;
   top: 391px;
-  left: 294px;
+  left: 224px;
 }
+.open {
+  position: relative;
+  top: 532px;
+  left: 1181px;
+}
+.create {
+  position: relative;
+  top: 617px;
+  left: 1181px;
+}
+
+.dropzone {
+  position: absolute;
+  top: 760px;
+  left: 1020px;
+  
+  border: dashed 2px red;
+  background-color: lightblue;
+}
+
 
 
 @font-face {
